# digital_nomads_travel_agent

./: README.md  pyproject.toml  report.md  requirements.txt
src/travel_agent/: crew.py  main.py  travel_crew.py
src/travel_agent/config/: agents.yaml  tasks.yaml  travel_agents.yaml  travel_tasks.yaml
src/travel_agent/setup/: LLama2Modelfile  MistralModelfile
