[tool.poetry]
name = "travel_agent"
version = "0.1.0"
description = "travel_agent using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.28.8"}
streamlit = "1.33.0"

[tool.poetry.scripts]
travel_agent = "travel_agent.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"